kubernetes/manifest-files/b9-manifest-files/project-02-nginx-alb-ebs/deployment-01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-demo
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-demo
  template:
    metadata:
      labels:
        app: nginx-demo
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-volume
              mountPath: /usr/share/nginx/html  # Mount the EBS volume here
            - name: nginx-config
              mountPath: /usr/share/nginx/html/index.html  # Mount the file at this specific path
              subPath: index.html  # Use subPath to mount ConfigMap file directly as index.html
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: nginx-volume
          persistentVolumeClaim:
            claimName: nginx-pvc
        - name: nginx-config
          configMap:
            name: nginx-data  # Use the ConfigMap for data
