kubernetes/manifest-files/b9-manifest-files/project-02-nginx-alb-ebs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: demo
spec:
  type: ClusterIP
  selector:
    app: nginx-demo
  ports:
    - port: 80
      targetPort: 80
